Add swag info about courier signUp
