# docs/swagger/swagger.json
@@ -19,12 +19,12 @@
                     "application/json"
                 ],
                 "tags": [
-                    "admins-auth"
+                    "admins"
                 ],
                 "summary": "Admin SignIn",
                 "parameters": [
                     {
-                        "description": "sign up info",
+                        "description": "sign in info",
                         "name": "input",
                         "in": "body",
                         "required": true,
@@ -82,12 +82,70 @@
                 "summary": "Courier SignIn",
                 "parameters": [
                     {
-                        "description": "sign up info",
+                        "description": "sign in info",
                         "name": "input",
                         "in": "body",
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/v1.signInInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/v1.tokenResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/v1.response"
+                        }
+                    },
+                    "404": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/v1.response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/v1.response"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/v1.response"
+                        }
+                    }
+                }
+            }
+        },
+        "/couriers/sign-up": {
+            "post": {
+                "description": "courier sign up",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "couriers"
+                ],
+                "summary": "Courier SignUp",
+                "parameters": [
+                    {
+                        "description": "sign up info",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/v1.courierSignUpInput"
                         }
                     }
                 ],
@@ -321,12 +379,12 @@
                     "application/json"
                 ],
                 "tags": [
-                    "users-auth"
+                    "users"
                 ],
                 "summary": "User SignIn",
                 "parameters": [
                     {
-                        "description": "sign up info",
+                        "description": "sign in info",
                         "name": "input",
                         "in": "body",
                         "required": true,
@@ -379,7 +437,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "users-auth"
+                    "users"
                 ],
                 "summary": "User SignUp",
                 "parameters": [
@@ -463,6 +521,32 @@
                 },
                 "working_status": {
                     "type": "string"
+                }
+            }
+        },
+        "v1.courierSignUpInput": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "latitude": {
+                    "type": "number"
+                },
+                "longitude": {
+                    "type": "number"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "phone": {
+                    "type": "string"
+                },
+                "working_status": {
+                    "type": "integer"
                 }
             }
         },
